# vincenty

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  rebar.config
.circleci/: config.yml
.github/workflows/: erlang.yml
native/: lib.rs  vincenty.rs
src/: vincenty.app.src  vincenty.erl
test/: vincenty_test.erl
