[package]
name = "native"
version = "0.1.0"
authors = ["Rahul Garg <rg@vihu.dev>"]
edition = "2018"
build = "native/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "native"
crate-type = ["dylib"]
path = "native/lib.rs"

[dependencies]
rustler = { git = "https://github.com/rusterlium/rustler.git", tag = "rustler-0.22.0" }
